--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,12 @@
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
+    "eslint": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "file-loader": "^6.2.0",
     "html-loader": "^3.0.1",
+    "prettier": "^2.4.1",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1"
   }
