--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,11 @@
     "html-webpack-plugin": "^5.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.3.3",
     "webpack": "^5.64.1",
     "webpack-cli": "^4.9.1",
