--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mysql2": "^2.3.3",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
+    "prettier": "^2.5.1",
     "sequelize": "^6.12.0-beta.2",
     "sequelize-cli": "^6.3.0"
   },
