--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "passport": "^0.5.2",
+    "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
     "prettier": "^2.5.1",
     "sequelize": "^6.12.0-beta.2",
