Chore: 코드 정리, 인기툰 text 추가

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -17,7 +17,9 @@
     "eslint:recommended",
     "eslint-config-prettier",
     "plugin:react/recommended",
-    "plugin:react-hooks/recommended"
+    "plugin:react-hooks/recommended",
+    "plugin:react/jsx-runtime",
+    "standard"
   ],
   "plugins": ["import", "react-hooks", "prettier"],
   "rules": {
