--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "@mui/material": "^5.4.0",
     "@mui/styled-engine-sc": "^5.3.0",
     "@mui/styles": "^5.3.0",
+    "@mui/system": "^5.5.2",
     "axios": "^0.24.0",
+    "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
     "html-webpack-plugin": "^5.5.0",
     "immer": "^9.0.7",
@@ -48,8 +50,8 @@
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
-    "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^7.0.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-functional": "^4.0.2",
     "eslint-plugin-import": "^2.25.3",
@@ -60,6 +62,7 @@
     "html-loader": "^3.0.1",
     "prettier": "^2.4.1",
     "style-loader": "^3.3.1",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "webpack-bundle-analyzer": "^4.5.0"
   }
 }
