--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js",
+    "build": "webpack build --config webpack.prod.js",
     "lint": "eslint ."
   },
   "keywords": [],
@@ -63,6 +63,7 @@
     "html-loader": "^3.0.1",
     "prettier": "^2.4.1",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.1",
     "url-loader": "^4.1.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-merge": "^5.8.0"
