Chore: docker-compose 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,9 @@ services:
     build:
       context: ./client
     ports:
-      - 3001:80
+      - 80:80
+    volumes:
+      - ./client/nginx/nginx.conf:/etc/nginx/nginx.conf
   server:
     build:
       context: ./server
