--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
     "html-webpack-plugin": "^5.5.0",
+    "http-proxy-middleware": "^2.0.4",
     "immer": "^9.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
