--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,13 +20,15 @@ services:
     build:
       context: ./client
     ports:
-      - 80:80
+      - 3001:80
     volumes:
       - ./client/nginx/nginx.conf:/etc/nginx/nginx.conf
   server:
     build:
       context: ./server
-    ports:
-      - 3065:3065
+    # ports:
+    #   - 3065:3065
+    expose:
+      - 3065
     depends_on:
       - db
