--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,8 @@
     "@babel/runtime": "^7.16.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
+    "babel-plugin-direct-import": "^1.0.0",
+    "babel-plugin-import": "^1.13.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
     "eslint-config-prettier": "^8.3.0",
