--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,8 @@
     "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "^2.0.4",
     "immer": "^9.0.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-intersection-observer": "^8.33.1",
     "react-material-ui-carousel": "^3.1.1",
     "react-redux": "^7.2.6",
@@ -65,6 +65,8 @@
     "file-loader": "^6.2.0",
     "html-loader": "^3.0.1",
     "prettier": "^2.4.1",
+    "sass": "^1.52.3",
+    "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.1",
     "url-loader": "^4.1.1",
