--- a/client/package.json
+++ b/client/package.json
@@ -68,6 +68,10 @@
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
+    "stylelint": "^14.9.1",
+    "stylelint-config-recess-order": "^3.0.0",
+    "stylelint-config-standard-scss": "^4.0.0",
+    "stylelint-declaration-strict-value": "^1.8.0",
     "terser-webpack-plugin": "^5.3.1",
     "url-loader": "^4.1.1",
     "webpack-bundle-analyzer": "^4.5.0",
