--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@mui/styles": "^5.3.0",
     "@mui/system": "^5.5.2",
     "axios": "^0.24.0",
+    "classnames": "^2.3.1",
     "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
     "html-webpack-plugin": "^5.5.0",
@@ -28,6 +29,7 @@
     "immer": "^9.0.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "react-intersection-observer": "^8.33.1",
     "react-material-ui-carousel": "^3.1.1",
     "react-redux": "^7.2.6",
